troca de imagens

--- a/tela.html
+++ b/tela.html
@@ -30,20 +30,20 @@
         <h2>Destaques</h2>
         <div class="cards">
             <div class="card">
-                <img src="" alt="Cactolândia">
-                <p>Cactolândia</p>
+                <img src="" alt="Portugal">
+                <p>Portugal</p>
+            </div>
+            <div class="Aracaju">
+                <img src="">
+                <p>Aracaju</p>
             </div>
             <div class="card">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Cataratas_do_Iguaçu_2014.jpg" alt="Cataratas">
-                <p>Cataratas do Iguaçu</p>
+                <img src="" alt="Itália">
+                <p>Itália</p>
             </div>
             <div class="card">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Ponte_Estaiada_SP.jpg" alt="Ponte Estaiada">
-                <p>Ponte Estaiada - SP</p>
-            </div>
-            <div class="card">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/f/fd/Elevador_Lacerda_Salvador.jpg" alt="Elevador Lacerda">
-                <p>Elevador Lacerda</p>
+                <img src="" alt="Veneza">
+                <p>Veneza</p>
             </div>
         </div>
     </div>
