coloquei as fotos

--- a/tela.html
+++ b/tela.html
@@ -30,19 +30,19 @@
         <h2>Destaques</h2>
         <div class="cards">
             <div class="card">
-                <img src="" alt="Portugal">
+                <img src="assests/Portugal" alt="Portugal">
                 <p>Portugal</p>
             </div>
             <div class="Aracaju">
-                <img src="">
+                <img src="assests/Aracaju">
                 <p>Aracaju</p>
             </div>
             <div class="card">
-                <img src="" alt="Itália">
+                <img src="assests/Itália" alt="Itália">
                 <p>Itália</p>
             </div>
             <div class="card">
-                <img src="" alt="Veneza">
+                <img src="assests/Veneza" alt="Veneza">
                 <p>Veneza</p>
             </div>
         </div>
