--- a/tela.html
+++ b/tela.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="topo">
-        <div class="logo">DestinoCerto</div>
+        <div class="logo" img src="assests/logo">DestinoCerto</div>
         <div class="botoes">
             <button>Cadastrar</button>
             <button>Login</button>
