--- a/tela.html
+++ b/tela.html
@@ -9,7 +9,9 @@
 <body>
 
     <div class="topo">
-        <div class="logo" img src="assests/logo">DestinoCerto</div>
+        <div class="logo"> 
+            <img src="assests/Logo DestinoCerto.png">            DestinoCerto
+        </div>
         <div class="botoes">
             <button>Cadastrar</button>
             <button>Login</button>
@@ -30,20 +32,20 @@
         <h2>Destaques</h2>
         <div class="cards">
             <div class="card">
-                <img src="assests/Portugal" alt="Portugal">
                 <p>Portugal</p>
+                <img src="assests/portugal.png" alt="Portugal">
             </div>
-            <div class="Aracaju">
-                <img src="assests/Aracaju">
+            <div class="card">
                 <p>Aracaju</p>
+                <img src="assests/aracaju.jpg">
             </div>
             <div class="card">
-                <img src="assests/Itália" alt="Itália">
                 <p>Itália</p>
+                <img src="assests/italia.webp" alt="Itália">
             </div>
             <div class="card">
-                <img src="assests/Veneza" alt="Veneza">
                 <p>Veneza</p>
+                <img src="assests/veneza.png" alt="Veneza">
             </div>
         </div>
     </div>
