--- a/tela.html
+++ b/tela.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DestinoCerto</title>
     <link rel="stylesheet" href="tela.css">
+
 </head>
 <body>
 
     <div class="topo">
         <div class="logo"> 
-            <img src="assests/Logo DestinoCerto.png">            DestinoCerto
-        </div>
+            <img src="assests/Logo DestinoCerto.png">   DestinoCerto</div>
         <div class="botoes">
             <button>Cadastrar</button>
             <button>Login</button>
@@ -19,13 +19,14 @@
     </div>
 
     <div class="menu">
+        <a href="tela.html">Início</a>
         <a href="#">Voos</a>
         <a href="#">Hospedagens</a>
         <a href="#">Atrações</a>
     </div>
 
     <div class="banner">
-        <input type="text" placeholder="Pesquisar destino...">
+        <input type="text" placeholder="🔍︎ Pesquisar destino...">
     </div>
 
     <div class="destaques">
@@ -47,6 +48,10 @@
                 <p>Veneza</p>
                 <img src="assests/veneza.png" alt="Veneza">
             </div>
+        </div>
+        <div classe="Ofertas">
+
+
         </div>
     </div>
 
