--- a/tela.html
+++ b/tela.html
@@ -28,9 +28,17 @@
     <div class="banner">
         <input type="text" placeholder="🔍︎ Pesquisar destino...">
     </div>
-
-    <div class="destaques">
-        <h2>Destaques</h2>
+  <div class="abas">
+        <button class="aba ativa" onclick="mostrarSecao('destaques')">
+            <i class="fa-solid fa-map-pin"></i> Destaques
+        </button>
+        <button class="aba" onclick="mostrarSecao('hoteis')">
+            <i class="fa-solid fa-hotel"></i> Hotéis
+        </button>
+        <button class="aba" onclick="mostrarSecao('ofertas')">
+            <i class="fa-solid fa-tags"></i> Ofertas
+        </button>
+    </div>
         <div class="cards">
             <div class="card">
                 <p>Portugal</p>
