informações do rodapé 1.0

--- a/tela.html
+++ b/tela.html
@@ -64,7 +64,11 @@
     </div>
 
     <div class="rodape">
-        <p>© 2025 DestinoCerto - Todos os direitos reservados</p>
+    <p>📞 Atendimento<br>
+    Central de ajuda / FAQ<br>
+    Opções de cancelamento<br>
+    Apoio a pessoas com deficiência<br>
+    Contaos:...</p>
     </div>
 
 </body>
